---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : int type k : a"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"k"@(FileId(1), 17..18) [Type]: alias[DefId(PackageId(0), LocalDefId(1))] of <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 21..22: cannot use `a` as a type alias
| error in file FileId(1) for 21..22: `a` is a reference to a variable, not a type
| note in file FileId(1) for 4..5: `a` declared here
